--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.15",
+		"clsx": "^2.0.0",
 		"next": "^13.4.19",
 		"postcss": "^8.4.29",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-wrap-balancer": "^1.1.0",
-		"tailwindcss": "^3.3.3"
+		"tailwindcss": "^3.3.3",
+		"tw-merge": "^0.0.1-alpha.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20.6.0",
