feat: add baseUrl to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
 		"module": "esnext",
 		"moduleResolution": "node",
 		"noEmit": true,
+		"baseUrl": "src",
 		"paths": {
-			"@api/*": ["./src/api/*"],
-			"@shared/*": ["./src/shared/*"]
+			"@api/*": ["api/*"],
+			"@shared/*": ["shared/*"]
 		},
 		"plugins": [
 			{
