feat: add redux and init store with books state

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
 		"baseUrl": "src",
 		"paths": {
 			"@api/*": ["api/*"],
-			"@shared/*": ["shared/*"]
+			"@shared/*": ["shared/*"],
+			"@store": ["store/index.ts"],
+			"@store/*": ["store/*"]
 		},
 		"plugins": [
 			{
