--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
 		"format:check": "tsc && prettier -c . && next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
 		"autoprefixer": "^10.4.15",
 		"clsx": "^2.0.0",
 		"next": "^13.4.19",
 		"postcss": "^8.4.29",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.2",
 		"react-wrap-balancer": "^1.1.0",
 		"tailwindcss": "^3.3.3",
-		"tw-merge": "^0.0.1-alpha.3"
+		"tw-merge": "^0.0.1-alpha.3",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@types/node": "^20.6.0",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
+		"@types/uuid": "^9.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"eslint": "8.43.0",
